--- a/src/common/components/ObservationScreen/index.css
+++ b/src/common/components/ObservationScreen/index.css
@@ -1,5 +1,5 @@
-.user-observation-description{
-    width: 60%;
+.observation-description{
+    width: 100%;
     height: 200px;
     border-radius: 2px;
     border: solid 1px #d7dfe9;
@@ -8,6 +8,17 @@
   .submit-btn{
     width:10%;
     align-self:center;
+
+  }
+  .radio-btn{
+    margin-right: 10px;
+    align-self: center;
+  }
+
+  .reset-btn{
+    width:9%;
+    align-self:center;
+    margin-right: 20px;
 
   }
   .highlight {
