--- a/src/RpModule/components/UserObservationPage/index.css
+++ b/src/RpModule/components/UserObservationPage/index.css
@@ -1,5 +1,5 @@
-.observation-description{
-    width: 100%;
+.user-observation-description{
+    width: 60%;
     height: 200px;
     border-radius: 2px;
     border: solid 1px #d7dfe9;
@@ -10,22 +10,8 @@
     align-self:center;
 
   }
-  .radio-btn{
-    margin-right: 10px;
-    align-self: center;
-  }
-
-  .reset-btn{
-    width:9%;
-    align-self:center;
-    margin-right: 20px;
-
-  }
   .highlight {
   border-radius: 2px;
   border: solid 1px red;
   background-color: rgba(255, 11, 55, 0.05);
-}
-.dropdown {
- width:25%;
 }
