--- a/src/Authuntication/components/SignInForm/index.css
+++ b/src/Authuntication/components/SignInForm/index.css
@@ -6,7 +6,31 @@
 .primary-button-large{
     width:320px;
     margin-bottom: 32px;
+    height: 40px;
 }
 .sign-input-field{
     margin-bottom: 24px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+}
+.error-icon{
+    color:#ff0b37;
+    position: absolute;
+    top: 25px;
+    left: 92%;
+}
+.error-input-element{
+     height: 40px;
+    width: 320px;
+    background-color: rgba(255, 11, 55, 0.05);
+    border-radius: 2px;
+    border: solid 1px #ff0b37;
+}
+.input-element{
+    height: 40px;
+   width: 320px;
+   border-radius: 2px;
+   border: solid 1px #7e858e;
+   background-color: #ffffff;
 }
