--- a/src/UserModule/components/UserObservationPage/index.css
+++ b/src/UserModule/components/UserObservationPage/index.css
@@ -1,5 +1,5 @@
 .user-observation-description{
-    width: 60%;
+    width: 600px;
     height: 200px;
     border-radius: 2px;
     border: solid 1px #d7dfe9;
@@ -14,4 +14,11 @@
   border-radius: 2px;
   border: solid 1px red;
   background-color: rgba(255, 11, 55, 0.05);
+}
+textarea {
+  resize: none;
+}
+.title{
+  border: solid 1px #d7dfe9;
+  height: 40px;
 }
