--- a/src/RpModule/components/RpObservatonListPage/index.css
+++ b/src/RpModule/components/RpObservatonListPage/index.css
@@ -2,3 +2,7 @@
     padding:8px 20px;
 }
 tr:nth-child(even) {background-color:#d7dfe9}
+.flter-Drop-Down{
+    width: 80px;
+    align-self: flex-end;
+}
