--- a/src/components/CartItem/index.css
+++ b/src/components/CartItem/index.css
@@ -4,7 +4,7 @@
   align-items: center;
   background-color: transparent;
   padding: 16px;
-  margin-bottom: 16px;
+  margin-bottom: 10px;
 }
 
 @media screen and (min-width: 768px) {
@@ -23,9 +23,10 @@
 }
 
 .cart-product-image {
-  width: 96px;
-  height: 96px;
+  width: 120px;
+  height: 100px;
   border-radius: 4px;
+  object-fit: fill;
 }
 
 .cart-item-details-container {
